<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/team_a"
                    android:textColor="@color/teams_names_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_a_score_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="0"
                    android:textColor="@color/score_text_color"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_a_goal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="16dp"
                    android:text="@string/goal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_a_foul_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="0"
                    android:textColor="@color/score_text_color"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_a_foul_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="16dp"
                    android:text="@string/foul"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/team_b"
                    android:textColor="@color/teams_names_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_b_score_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="0"
                    android:textColor="@color/score_text_color"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_b_goal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="16dp"
                    android:text="@string/goal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_b_foul_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="0"
                    android:textColor="@color/score_text_color"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_b_foul_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="16dp"
                    android:text="@string/foul"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:paddingBottom="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="16dp"
            android:text="@string/reset"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>